table: fix overflow-x to overflow (#94)

--- a/src/styles/components/table.scss
+++ b/src/styles/components/table.scss
@@ -8,5 +8,5 @@
 
 .table-responsive {
   width: 100%;
-  overflow-x: auto;
+  overflow: auto;
 }
